--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   retrofit: ^4.1.0
   json_annotation: ^4.8.1
   logger: ^2.1.0
+  flutter_riverpod: ^2.4.10
 
 dev_dependencies:
   flutter_test:
