--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
   retrofit_generator: ^8.1.0
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
+  flutter_gen: ^5.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
