Modify the method of obtaining version number

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -33,14 +33,19 @@ jobs:
       - name: Build APK
         run: flutter build apk
 
+      - name: Extract Version
+        id: extract_version
+        run: echo "::set-output name=version::$(echo ${{ github.ref }} | sed 's/^refs\/tags\///')"
+      
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ steps.extract_version.outputs.version }}
+          release_name: Release ${{ steps.extract_version.outputs.version }}
           draft: false
           prerelease: false
 
