--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,6 +17,12 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.19.2'
+
+      - name: Set up JDK 11  
+        uses: actions/setup-java@v2  
+        with:  
+          java-version: '11'  
+          distribution: 'temurin'
   
       - name: Cache dependencies
         uses: actions/cache@v2
