--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: macos-latest # macOS 用于构建 iOS 应用  
   
     steps:  
-      - uses: actions/checkout@v2  
+      - uses: actions/checkout@v3
   
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -19,13 +19,13 @@ jobs:
           flutter-version: '3.19.2'
 
       - name: Set up JDK 11  
-        uses: actions/setup-java@v2  
+        uses: actions/setup-java@v3  
         with:  
           java-version: '11'  
           distribution: 'temurin'
   
       - name: Cache dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.pub-cache
           key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.yaml') }}
@@ -35,32 +35,33 @@ jobs:
   
       - name: Run tests
         run: flutter test
-   
+
+      - name: Build iOS app  
+        run: |  
+          flutter clean  
+          flutter build ios --release --no-codesign
+
+      - name: Create IOS Release Artifacts  
+        run: |  
+         mkdir artifacts  
+          cp -r build/ios/iphoneos/Runner.app artifacts/Runner.app  
+          zip -r artifacts/Runner.ipa artifacts/Runner.app  
+
       - name: Build Android APK  
         run: flutter build apk
   
       - name: Build Android App Bundle (AAB)  
         run: flutter build appbundle
-  
-     #- name: Build iOS app  
-     #  run: |  
-     #    flutter clean  
-     #    flutter build ios --release --no-codesign
-
-      #- name: Create IOS Release Artifacts  
-      #  run: |  
-      #   mkdir artifacts  
-      #    cp -r build/ios/iphoneos/Runner.app artifacts/Runner.app  
-      #    zip -r artifacts/Runner.ipa artifacts/Runner.app  
-
+     
       # 提取版本号
       - name: Extract version from tag  
         run: |  
           VERSION=${GITHUB_REF#refs/tags/}  
           echo "VERSION=$VERSION" >> $GITHUB_ENV  
+
       - name: Create Release  
         id: create_release  
-        uses: actions/create-release@v1  
+        uses: actions/create-release@v2  
         env:  
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         with:  
@@ -69,31 +70,31 @@ jobs:
           draft: false  
           prerelease: false  
 
-     #- name: Upload iOS IPA to Release  
-     #  id: upload-ipa-release-asset  
-     #  uses: actions/upload-release-asset@v1  
-     #  env:  
-     #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
-     #  with:  
-     #    upload_url: ${{ steps.create_release.outputs.upload_url }}  
-     #    asset_path: ./artifacts/Runner.ipa  
-     #    asset_name: Runner.ipa  
-     #    asset_content_type: application/zip    
-  
-      - name: Upload Android APK to Release  
-        id: upload-apk-release-asset  
-        uses: actions/upload-release-asset@v1  
+      - name: Upload iOS IPA to Release  
+        id: upload-ipa-release-asset  
+        uses: actions/upload-release-asset@v2  
         env:  
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         with:  
           upload_url: ${{ steps.create_release.outputs.upload_url }}  
-          asset_path: ./build/app/outputs/flutter-apk/app-release.apk    
+          asset_path: ./artifacts/Runner.ipa  
+          asset_name: Runner.ipa  
+          asset_content_type: application/zip    
+  
+      - name: Upload Android APK to Release  
+        id: upload-apk-release-asset  
+        uses: actions/upload-release-asset@v2
+        env:  
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+        with:  
+          upload_url: ${{ steps.create_release.outputs.upload_url }}  
+          asset_path: ./build/app/outputs/apk/app-release.apk    
           asset_name: app-release.apk  
           asset_content_type: application/vnd.android.package-archive  
   
       - name: Upload Android App Bundle (AAB) to Release  
         id: upload-aab-release-asset  
-        uses: actions/upload-release-asset@v1  
+        uses: actions/upload-release-asset@v2  
         env:  
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         with:  
