--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,31 +1,25 @@
-name: Flutter CI/CD  
+name: Flutter CI  
   
 on:  
   push:  
     tags:  
-      - 'v*' # 只对以 'v' 开头的 tag 触发构建  
+      - 'v*' # Trigger on version tags like v1.0.0  
   
 jobs:  
-  build-and-release:  
-    name: Build and Release  
-    runs-on: macos-latest # macOS 用于构建 iOS 应用  
-  
+  build_android:  
+    name: Build Android  
+    runs-on: ubuntu-latest  
     steps:  
-      - uses: actions/checkout@v3
-  
-      - name: Set up Flutter
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Set up Flutter 
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.19.2'
 
-      - name: Set up JDK 11  
-        uses: actions/setup-java@v3  
-        with:  
-          java-version: '11'  
-          distribution: 'temurin'
-  
       - name: Cache dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v2
         with:
           path: ~/.pub-cache
           key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.yaml') }}
@@ -34,41 +28,168 @@ jobs:
         run: flutter pub get
   
       - name: Run tests
-        run: flutter test
+        run: flutter test    
 
-      - name: Build iOS app  
+      - name: Build APK and AAB  
         run: |  
           flutter clean  
-          flutter build ios --release --no-codesign
+          flutter build apk
+          flutter build appbundle
 
-      - name: Create IOS Release Artifacts  
-        run: |  
-         mkdir artifacts  
-          cp -r build/ios/iphoneos/Runner.app artifacts/Runner.app  
-          zip -r artifacts/Runner.ipa artifacts/Runner.app  
-
-      - name: Build Android APK  
-        run: flutter build apk
-  
-      - name: Build Android App Bundle (AAB)  
-        run: flutter build appbundle
-     
-      # 提取版本号
+       # 提取版本号
       - name: Extract version from tag  
         run: |  
           VERSION=${GITHUB_REF#refs/tags/}  
-          echo "VERSION=$VERSION" >> $GITHUB_ENV  
+          echo "VERSION=$VERSION" >> $GITHUB_ENV      
 
-      - name: Create Release  
-        id: create_release  
-        uses: actions/create-release@v1  
-        env:  
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+
+      # 检查是否存在指定的 GitHub Release
+      - name: Get existing release
+        id: get_release
+        uses: actions/github-script@v5
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { octokit } = require('@octokit/core');
+            const { createRelease } = require('@octokit/plugin-create-release');
+            
+            const MyOctokit = octokit.plugin(createRelease);
+            const octokit = new MyOctokit({ auth: process.env.GITHUB_TOKEN });
+            
+            try {
+              const response = await octokit.request('GET /repos/{owner}/{repo}/releases/tags/{tag}', {
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                tag: ${{ env.VERSION }}
+              });
+              console.log('Release exists:', response.data);
+              core.setOutput('release_exists', true);
+              core.setOutput('upload_url', response.data.upload_url);
+            } catch (error) {
+              if (error.status === 404) {
+                console.log('Release does not exist');
+                core.setOutput('release_exists', false);
+              } else {
+                throw error;
+              }
+            }
+
+       # 如果不存在，则创建新的 GitHub Release
+      - name: Create new release
+        if: steps.check_release.outputs.release_exists == 'false'
+        uses: actions/create-release@v1
+        id: create_release
         with:  
           tag_name: ${{ env.VERSION }}  
           release_name: Release ${{ env.VERSION }}  
           draft: false  
-          prerelease: false  
+          prerelease: false    
+
+      - name: Upload Android APK to Release  
+        id: upload-apk-release-asset  
+        uses: actions/upload-release-asset@v1
+        env:  
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+        with:  
+          upload_url: ${{ steps.create_release.outputs.upload_url }}  
+          asset_path: ./build/app/outputs/apk/app-release.apk    
+          asset_name: app-release.apk  
+          asset_content_type: application/vnd.android.package-archive  
+    
+      - name: Upload Android App Bundle (AAB) to Release  
+        id: upload-aab-release-asset  
+        uses: actions/upload-release-asset@v1  
+        env:  
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+        with:  
+          upload_url: ${{ steps.create_release.outputs.upload_url }}  
+          asset_path: ./build/app/outputs/bundle/release/app-release.aab  
+          asset_name: app-release.aab  
+          asset_content_type: application/octet-stream  
+   
+  build_ios:  
+    name: Build iOS  
+    runs-on: macos-latest  
+    steps:  
+      - name: Checkout Code
+        uses: actions/checkout@v2  
+
+      - name: Set up Flutter 
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.19.2'
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.pub-cache
+          key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.yaml') }}
+  
+      - name: Get packages
+        run: flutter pub get
+  
+      - name: Run tests
+        run: flutter test    
+
+      - name: Build iOS app  
+        run: |  
+          flutter clean  
+          flutter build ios --release --no-codesign 
+
+      - name: Create IOS Release Artifacts  
+        run: |  
+          mkdir artifacts  
+          cp -r build/ios/iphoneos/Runner.app artifacts/Runner.app  
+          zip -r artifacts/Runner.ipa artifacts/Runner.app  
+ 
+
+       # 提取版本号
+      - name: Extract version from tag  
+        run: |  
+          VERSION=${GITHUB_REF#refs/tags/}  
+          echo "VERSION=$VERSION" >> $GITHUB_ENV 
+
+      # 检查是否存在指定的 GitHub Release
+      - name: Get existing release
+        id: get_release
+        uses: actions/github-script@v5
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { octokit } = require('@octokit/core');
+            const { createRelease } = require('@octokit/plugin-create-release');
+            
+            const MyOctokit = octokit.plugin(createRelease);
+            const octokit = new MyOctokit({ auth: process.env.GITHUB_TOKEN });
+            
+            try {
+              const response = await octokit.request('GET /repos/{owner}/{repo}/releases/tags/{tag}', {
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                tag: ${{ env.VERSION }}
+              });
+              console.log('Release exists:', response.data);
+              core.setOutput('release_exists', true);
+              core.setOutput('upload_url', response.data.upload_url);
+            } catch (error) {
+              if (error.status === 404) {
+                console.log('Release does not exist');
+                core.setOutput('release_exists', false);
+              } else {
+                throw error;
+              }
+            }
+
+       # 如果不存在，则创建新的 GitHub Release
+      - name: Create new release
+        if: steps.check_release.outputs.release_exists == 'false'
+        uses: actions/create-release@v1
+        id: create_release
+        with:  
+          tag_name: ${{ env.VERSION }}  
+          release_name: Release ${{ env.VERSION }}  
+          draft: false  
+          prerelease: false    
 
       - name: Upload iOS IPA to Release  
         id: upload-ipa-release-asset  
@@ -80,27 +201,5 @@ jobs:
           asset_path: ./artifacts/Runner.ipa  
           asset_name: Runner.ipa  
           asset_content_type: application/zip    
-  
-      - name: Upload Android APK to Release  
-        id: upload-apk-release-asset  
-        uses: actions/upload-release-asset@v1
-        env:  
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
-        with:  
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  
-          asset_path: ./build/app/outputs/apk/app-release.apk    
-          asset_name: app-release.apk  
-          asset_content_type: application/vnd.android.package-archive  
-  
-      - name: Upload Android App Bundle (AAB) to Release  
-        id: upload-aab-release-asset  
-        uses: actions/upload-release-asset@v1  
-        env:  
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
-        with:  
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  
-          asset_path: ./build/app/outputs/bundle/release/app-release.aab  
-          asset_name: app-release.aab  
-          asset_content_type: application/octet-stream  
-  
-     
+            
+    
