--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -42,7 +42,6 @@ jobs:
           VERSION=${GITHUB_REF#refs/tags/}  
           echo "VERSION=$VERSION" >> $GITHUB_ENV      
 
-
       # 检查是否存在指定的 GitHub Release
       - name: Get existing release
         id: get_release
@@ -50,33 +49,18 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const { octokit } = require('@octokit/core');
-            const { createRelease } = require('@octokit/plugin-create-release');
-            
-            const MyOctokit = octokit.plugin(createRelease);
-            const octokit = new MyOctokit({ auth: process.env.GITHUB_TOKEN });
-            
-            try {
-              const response = await octokit.request('GET /repos/{owner}/{repo}/releases/tags/{tag}', {
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                tag: ${{ env.VERSION }}
-              });
-              console.log('Release exists:', response.data);
-              core.setOutput('release_exists', true);
-              core.setOutput('upload_url', response.data.upload_url);
-            } catch (error) {
-              if (error.status === 404) {
-                console.log('Release does not exist');
-                core.setOutput('release_exists', false);
-              } else {
-                throw error;
-              }
-            }
+            const response = await github.repos.getReleaseByTag({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag: ${{ env.VERSION }}
+            });
+            console.log('Release exists:', response.data);
+            core.setOutput('upload_url', response.data.upload_url);
+
 
        # 如果不存在，则创建新的 GitHub Release
       - name: Create new release
-        if: steps.check_release.outputs.release_exists == 'false'
+        if: steps.get_release.outputs.upload_url == null
         uses: actions/create-release@v1
         id: create_release
         with:  
@@ -91,7 +75,7 @@ jobs:
         env:  
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         with:  
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  
+          upload_url: ${{ steps.get_release.outputs.upload_url || steps.create_release.outputs.upload_url }}  
           asset_path: ./build/app/outputs/apk/app-release.apk    
           asset_name: app-release.apk  
           asset_content_type: application/vnd.android.package-archive  
@@ -156,33 +140,17 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const { octokit } = require('@octokit/core');
-            const { createRelease } = require('@octokit/plugin-create-release');
-            
-            const MyOctokit = octokit.plugin(createRelease);
-            const octokit = new MyOctokit({ auth: process.env.GITHUB_TOKEN });
-            
-            try {
-              const response = await octokit.request('GET /repos/{owner}/{repo}/releases/tags/{tag}', {
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                tag: ${{ env.VERSION }}
-              });
-              console.log('Release exists:', response.data);
-              core.setOutput('release_exists', true);
-              core.setOutput('upload_url', response.data.upload_url);
-            } catch (error) {
-              if (error.status === 404) {
-                console.log('Release does not exist');
-                core.setOutput('release_exists', false);
-              } else {
-                throw error;
-              }
-            }
+            const response = await github.repos.getReleaseByTag({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag: ${{ env.VERSION }}
+            });
+            console.log('Release exists:', response.data);
+            core.setOutput('upload_url', response.data.upload_url);
 
        # 如果不存在，则创建新的 GitHub Release
       - name: Create new release
-        if: steps.check_release.outputs.release_exists == 'false'
+        if: steps.get_release.outputs.upload_url == null
         uses: actions/create-release@v1
         id: create_release
         with:  
@@ -197,7 +165,7 @@ jobs:
         env:  
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         with:  
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  
+          upload_url: ${{ steps.get_release.outputs.upload_url || steps.create_release.outputs.upload_url }}  
           asset_path: ./artifacts/Runner.ipa  
           asset_name: Runner.ipa  
           asset_content_type: application/zip    
