--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -132,12 +132,12 @@ jobs:
             echo "release_exists=true" >> $GITHUB_ENV
             response=$(curl -s -X GET -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ env.VERSION }}")
             upload_url=$(echo "$response" | jq -r '.upload_url')
-            echo "upload_url=$upload_url" >> $GITHUB_ENV
+            echo "uploadUrl=$upload_url" >> $GITHUB_ENV
           fi
 
        # 如果不存在，则创建新的 GitHub Release
       - name: Create new release
-        if: steps.get_release.outputs.release_exists != 'true'
+        if:  ${{ env.release_exists }} != 'true'
         id: create_release
         uses: actions/create-release@v1
         env:  
@@ -154,7 +154,7 @@ jobs:
         env:  
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         with:  
-          upload_url: ${{ steps.get_release.outputs.upload_url || steps.create_release.outputs.upload_url }}  
+          upload_url: ${{ env.uploadUrl || steps.create_release.outputs.upload_url }}  
           asset_path: ./artifacts/Runner.ipa  
           asset_name: ios-runner-${{ env.VERSION }}.ipa
           asset_content_type: application/zip
