--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -2,8 +2,8 @@ name: Flutter CI
   
 on:  
   push:  
-    branches:
-      - main
+    tags:  
+      - 'v*' # Trigger on version tags like v1.0.0  
   
 jobs:  
   build_android:  
